# pickleball-court-detection

./: .gitignore  README.md  pyproject.toml
notebooks/: court_keypoint_training.ipynb
src/pickleball_court_detection/: __init__.py  config.py  constants.py  court.py  geometry.py  infer.py
tests/: test_court_jump.py
