[project]
name = "pickleball-court-detection"
version = "0.1.0"
description = "Pickleball court keypoints from YOLO-pose: parsing, temporal smoothing, homography"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "opencv-python>=4.12.0.88",
    "ultralytics>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pickleball_court_detection"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pickleball_court_detection"]

[tool.pytest.ini_options]
testpaths = ["tests"]
